# RobotSystemFunai

./: .gitignore  CONFIG_UPDATE_SUMMARY.md  DUAL_CAMERA_GUIDE.md  DUAL_ROBOT_LOGIC_GUIDE.md  HAILO_ROS2_MULTIPLEXING_GUIDE.md  OUTPUT_TRAY_USAGE.md  TEST_REPORT_DUAL_CAMERA.md  automated_test.py  build_and_test.sh  convert_to_dual.sh  csi_camera_params.yaml  debug_camera_hardware.sh  fastdds_no_shm.xml  reset_hailo.sh  run_all_nodes.sh  run_all_three.sh  run_both_nodes.sh  run_gripper_node.sh  run_two_camera.sh  stop_all.sh  test_after_reboot.sh  test_dual_camera.sh  test_output_tray.sh
.github/: copilot-instructions.md
install_tmp/: local_setup.sh  setup.sh
install_tmp/robot_control_main/share/robot_control_main/: package.bash  package.zsh
src/: NEW_STATE_FLOW.md
src/YOLO-HailoRT-ROS2/hailort_yolo_common/include/hailort_yolo_common/: coco_names.hpp  hailo_nms_decode.hpp
src/YOLO-HailoRT-ROS2/hailort_yolo_common/include/hailort_yolo_common/labels/: coco_eighty.hpp  tplugcartridge_labels.txt
src/YOLO-HailoRT-ROS2/hailort_yolo_common/src/: detection_inference.cpp  yolo_hailortpp.cpp
src/YOLO-HailoRT-ROS2/yolo_ros_hailort_cpp/: CMakeLists.txt
src/YOLO-HailoRT-ROS2/yolo_ros_hailort_cpp/launch/: multicam_yolox_hailortbk1_8_launch.py  mutilcam_v4l2_yolox_hailort.launch.py  mutilcam_yolox_hailort.launch.py  mutilcam_yolox_hailort.launch.py.backup_20260130_152614  mutilcam_yolox_hailort.launchbk.py  system_csi_dual_model.launch.py  system_csi_dual_modelbk.py  yolox_hailort.launch.py
src/YOLO-HailoRT-ROS2/yolo_ros_hailort_cpp/src/: yolo_ros_hailort_cpp.cpp
src/bbox_drawer_cpp/: CMakeLists.txt  package.xml
src/bbox_drawer_cpp/launch/: bkoverplay  overlay_two_cams.launch.py  overplay_two_camsbk.launch.py
src/bbox_drawer_cpp/src/: overlay_bboxes_node.cpp  overlay_bboxes_nodebk.cpp
src/csi_camera/: CHANGELOG.md  CMakeLists.txt  package.xml
src/csi_camera/launch/: dual_camera.launch.py  full_camera_system.launch.py
src/csi_camera/src/: csi_camera_node.cpp  csi_camera_node.cpp.backup_20251231_124535  csi_camera_node.cpp.backup_20260130_152612  csi_dual_camera_node.cpp  csibk.cpp
src/nova5_gui/: CMakeLists.txt  package.xml
src/nova5_gui/include/nova5_gui/: nova5_client.hpp
src/nova5_gui/launch/: gui.launch.py
src/nova5_gui/qml/: Main.qml  Nova5Panel.qml
src/nova5_gui/resource/: qml.qrc
src/nova5_gui/src/: main.cpp  nova5_client.cpp
src/plc_msg/: CMakeLists.txt  package.xml
src/plc_msg/msg/: PLCRead.msg  PLCResponse.msg  PLCWrite.msg
src/robot_control_main/: CMakeLists.txt  camera_hardware_verification.sh  gripper_festo_node.py  package.xml  system_overview.md.resolved
src/robot_control_main/config/: joint_pose_params.yaml
src/robot_control_main/docs/: SLOT_DETECTION_LOGIC.md
src/robot_control_main/launch/: DOgripper.py  robot_control_main_launch.py  robot_with_gripper.launch.py
src/robot_control_main/scripts/: disable_robot.sh  enable_robot.sh
src/robot_control_main/src/: bkcsi_code  bkdual.cpp  robot_logic_node.cpp  robot_logic_node.cpp.backup_20260130_152613  robot_logic_node_bk.cpp  robot_logic_node_bk1_8.cpp  robot_logic_node_bk_1.cpp  robot_logic_node_csi.cpp  robot_logic_node_dual.cpp  robot_logic_nodebk2.cpp  test24_12.cpp
src/ros2_qml_gui/: CMakeLists.txt  package.xml  qml.qrc
src/ros2_qml_gui/qml/: CameraView.qml  Main.qml
src/ros2_qml_gui/src/: cam_node.cpp  cam_provider.cpp  main.cpp
src/ros2_qml_gui1/: CMakeLists.txt  package.xml  preview_ui.sh  qml.qrc  qml_rc.py  robot_control_preview.html  robot_control_preview_13inch.html
src/ros2_qml_gui1/include/ros2_qml_gui/: cam_node.hpp  cam_provider.hpp  robot_controller.hpp
src/ros2_qml_gui1/qml/: Main.qml  MockRobotController.qml  RobotControlPreview.qml  frm_settings.qml  qml_resource.cpp
src/ros2_qml_gui1/src/: cam_node.cpp  main.cpp  robot_controller.cpp
src/rpi_cam_bridge/: package.xml  setup.py
src/rpi_cam_bridge/launch/: dual_cam.launch.py
src/rpi_cam_bridge/resource/: rpi_cam_bridge
src/rpi_cam_bridge/rpi_cam_bridge/: cam_node.py
src/snap7_driver/: CMakeLists.txt  package.xml
src/snap7_driver/env-hooks/: 99_snap7_library_path.sh.in
src/snap7_driver/launch/: snap7_node.launch.py
src/snap7_driver/src/: snap7.cpp  snap7_node.cpp
