<?xml version="1.0"?>
<package format="3">
  <name>snap7_driver</name>
  <version>0.0.0</version>
  <description>Snap7 ROS2 driver for PLC communication</description>

  <maintainer email="zyl@todo.todo">zyl</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>plc_msg</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
